# ml-sandbox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  bag4message.py  bag4message_solution.py  environment.yaml  test_bag4message.py
anything/: openai_prompt.ipynb  openai_prompt.py  pyproject.toml
bag4message/: bag4message.py  bag4message_solution.py  test_bag4message.py
financial/: explore_polars.py  financial_correlation.ipynb  pandas_gui.py  pyproject.toml
financial/data/: CORESTICKM159SFRBATL.csv  DCOILWTICO.csv  QBPBSTAS.csv  RIFSPFFNB.csv  S&P 500 Historical Data.csv  T10Y2Y.csv  gold_2023-02-22.csv
makemore/: data.py  environment.yaml  makemore.ipynb  neural_net.py
mlops/: Dockerfile  README.md  compose.yaml  environment.yaml  predict.py  requirements.txt  serve
mlops/features/: predict_endpoint.feature
mlops/steps/: predict_endpoint.py
nlpscrap/: environment.yaml
pytorchtext/: bigram_language_model.py  bigram_language_model_karpathy.py  bigram_language_model_torch_layers.py  data.py  environment.yaml  run.py  train.py  train_colab.ipynb  transformer_auto_regressive.py  tutorial_bigram.py  tutorial_bigram_transformer.py  tutorial_transfromer.py
ragblog/: AGENTS.md  README.md  notebook_ragblog.ipynb  pyproject.toml
ragblog/ci/: lint.sh
ragblog/data/: output.md  output_2026-02-12.md
ragblog/data/eval/: eval_set.jsonl  eval_set_small.jsonl  testset.jsonl  testset_qwen2.5_14b.jsonl
ragblog/data/eval/results/: QWEN_3_5_9B.json  QWEN_3_5_9B.md  baseline.json  baseline.md
ragblog/ragblog/: batch_evaluator.py  conf.py  crawler.py  doc_loader.py  logger_custom.py  post.py  rag.py  rag_evaluator.py  rag_pipeline.py  run.py  vector_db.py
ragblog/ragblog/data/: batch_evaluation_gpt-oss-20b.json  batch_evaluation_lfm2_24b.json  batch_evaluation_qwen3-coder_30b.json
ragblog/run/: compare.ipynb  evaluate.ipynb  evaluate.py  generate_testset.ipynb  generate_testset.py  query.ipynb  query.py  query_gpt_oss_20b.ipynb  query_qwen3_5_27b.ipynb  query_qwen3_5_27bIQ2_M.ipynb  query_qwen3_5_9b.ipynb  query_qwen_3_5_27b.ipynb  query_qwen_3_5_9b.ipynb  wrap_gguf_ollama.sh
ragblog/scripts/: get_model_config.py  llama_server_start.sh  quantize_27b_q3.sh  server_start.sh
ragblog/src/: const.py  crawler.py  doc_loader.py  llama_server_manager.py  logger_custom.py  model_comparator.py  ollama_embeddings.py  post.py  rag.py  vector_db.py
ragblog/src/evaluation/: eval_set.py  evaluator.py  rag_eval.py  testset.py
ragblog/tests/: test_batch_evaluator.py  test_conf.py  test_crawler.py  test_doc_loader.py  test_evaluation.py  test_llama_server_manager.py  test_ollama_embeddings.py  test_post.py  test_rag.py  test_rag_evaluator.py  test_rag_pipeline.py  test_vector_db.py
tao-nlp/: pyproject.toml
tao-nlp/tao_nlp/: classifier.py  eda.py  ner_basic.py  sbert_101.py  scrap.py
topbox/: AGENTS.md  README.md  mat_profile.md  pyproject.toml  run_topbox.py  topbox.csv
topbox/ci/: test.sh
topbox/data/: fighter_seed.json  match.parquet  topbox.csv  topbox_consolidated.csv
topbox/tests/: test_conf.py  test_crawl_min.py  test_crawler.py  test_crawler_live_box.py  test_crawler_wiki.py  test_dataset.py  test_pagerank.py  test_wikipedia.py
topbox/topbox/: conf.py  const.py  crawl_min.py  crawler.py  crawler_live_box.py  crawler_wiki.py  dataset.py  domain.py  fighters.json  name_mapping.json  page_rank_box.py  pagerank.py  run.py  wikipedia.py
transactionclassifier/: Dockerfile  README.md  requirements_train.txt
transactionclassifier/scripts/: lint.sh
transactionclassifier/tests/: fixture_set.py  test_conf.py  test_model.py  test_service.py  test_service_docker.py  test_train_data.py
transactionclassifier/transactionclassifier/app/: logger_custom.py  main.py  model.py  prediction.py  schema_pydantic.py  service.py
transactionclassifier/transactionclassifier/app/conf/: conf_dev.json  conf_test.json
transactionclassifier/transactionclassifier/app/train/: data.py
tx_class/: Dockerfile  README.md  requirements.txt  requirements_dev.txt
tx_class/src/app/: conf.py  date_time.py  main.py  model.py  prediction.py  schema_pydantic.py  service.py
tx_class/src/app/train/: data.py
tx_class/tests/: fixture_set.py  test_model.py  test_service.py  test_service_docker.py  test_train_data.py
