[tool.poetry]
name = "anything"
version = "0.1.0"
description = ""
authors = ["mat <aadrian.mat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.6.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"
openai = "^0.27.4"
black = "^23.3.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

