[tool.poetry]
name = "financial"
version = "0.1.0"
description = ""
authors = ["mat <aadrian.mat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.5.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
