[project]
name = "ragblog"
version = "0.1.0"
description = "Retrieval Augmented Generation for blog content"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.8.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "langchain>=0.2.10",
    "langchain-community>=0.2.9",
    "langchain-chroma>=0.1.2",
    "jq>=1.7.0",
    "langchainhub>=0.1.20",
    "langchain-ollama>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
log_cli_format = "%(asctime)s,%(msecs)d %(levelname)-8s [%(filename)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
