[tool.poetry]
name = "tao-nlp"
version = "0.1.0"
description = ""
authors = ["mat <aadrian.mat@gmail.com>"]
readme = "README.md"
packages = [{include = "tao_nlp"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.12.2"
requests = "2.28.2"
scikit-learn = "1.2.2"
spacy = "3.5.2" # python -m spacy download en_core_web_md
transformers = "4.28.1"
sentence-transformers = "2.2.2"
datasets = "^2.11.0"
black = "^23.3.0"
isort = "^5.12.0"
evaluate = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
