[project]
name = "topbox"
version = "0.1.0"
description = "Compute rank for top boxers using pagerank on match graph"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "networkx",
    "pydantic",
    "ruff",
    "pytest",
    "mypy",
    "coverage",
    "types-requests",
    "pandas-stubs",
    "black",
    "isort",
    "pyarrow>=23.0.1",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s,%(msecs)d %(levelname)-8s [%(filename)s:%(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
